# subrandr

./: CHANGELOG.md  Cargo.toml  OPTIONS.md  README.md  build.rs  flake.nix  install.sh  subrandr.h  x11_overlay_mpv.sh  x11_overlay_mpv_release.sh
.cargo/: config.toml
.github/workflows/: check.yml
ci/: c_sanity_check.c  c_sanity_check.sh  ubuntu_install_packages.sh
docs/: options.md
examples/: winit-transparent-window.rs  x11-transparent-window.rs
examples/c_glfw_vulkan/: main.c
include/: config.h  font_provider.h  layout.h  logging.h  piece_render.h  subrandr.h  vk.h
include/internal/: stability.h
nix/: default.nix
sbr-log/: Cargo.toml
sbr-log/src/: lib.rs
sbr-macros/: Cargo.toml
sbr-macros/src/: common.rs  lib.rs  parse.rs  style.rs  test.rs
sbr-overlay/: Cargo.toml
sbr-overlay/src/: ipc.rs  main.rs  softpresent.rs
sbr-overlay/src/ipc/: cdp.rs  mpv.rs
sbr-overlay/src/softpresent/: x11.rs
sbr-rasterize/: Cargo.toml
sbr-rasterize/benches/: sai.rs
sbr-rasterize/snapshots/sw/: antialiased_rectangle.png.ptr  bilinear_scaling.png.ptr  blurred_triangle.png.ptr  clipped_polyline.png.ptr  placeholder_subscene_with_filled_outline.png.ptr  simple_rectangles.png.ptr  translated_subscene_with_polyline.png.ptr
sbr-rasterize/src/: color.rs  lib.rs  rasterizer.rs  scene.rs
sbr-rasterize/src/rasterizer/: sw.rs  wgpu.rs
sbr-rasterize/src/rasterizer/sw/: blit.rs  blur.rs  glyph.rs  path.rs  polygon.rs  scale.rs  strip.rs  tiler.rs
sbr-rasterize/src/rasterizer/sw/strip/: tile.rs
sbr-rasterize/src/rasterizer/sw/strip/tile/: avx2.rs  generic.rs
sbr-rasterize/src/rasterizer/wgpu/: blit.wgsl  packer.rs
sbr-rasterize/tests/: sw.rs
sbr-test-util/: Cargo.toml
sbr-test-util/src/: lib.rs
sbr-util/: Cargo.toml
sbr-util/src/: cache.rs  const_tagged_enum.rs  lib.rs  math.rs  rbtree.rs  rc.rs  rev_if.rs
sbr-util/src/math/: curve.rs  fixed.rs  num.rs  outline.rs
sbr-util/src/rc/: base.rs
src/: ansi.rs  ass.rs  capi.rs  color.rs  config.rs  css.rs  csssyn.rs  display.rs  html.rs  layout.rs  lib.rs  log.rs  main.rs  miniweb.rs  oklab.rs  outline.rs  painter.rs  raster.rs  rasterize.rs  render.rs  renderer.rs  style.rs  symbol.rs  text.rs  util.rs  wasm.rs
src/ass/: convert.rs  mod.rs  parse.rs  parse_overrides.rs
src/capi/: config.rs  instanced_raster.rs  layout.rs  library.rs  renderer.rs  subtitles.rs  vk.rs  wasm.rs
src/capi/renderer/: instanced.rs  piece_render.rs
src/color/: lut.rs
src/css/: component.rs  parse.rs  properties.rs  selector.rs  stylesheet.rs  tokenizer.rs  value.rs  values.rs
src/css/parse/: tokenizer.rs
src/css/value/: error.rs  parse.rs
src/csssyn/: algorithms.rs  buffer.rs  error.rs  peek.rs  token.rs  tokenizer.rs  value.rs
src/csssyn/value/: parse.rs  token_buffer.rs  token_tree.rs
src/display/: decoration.rs  paint_op.rs
src/html/: all_entities_test.rs  entities.rs  generate.py
src/layout/: block.rs  inline.rs  style.rs
src/layout/inline/: builder.rs  glyph_string.rs  whitespace.rs
src/log/: log_compat.rs
src/math/: curve.rs  fixed.rs  mod.rs  num.rs  tessellate.rs
src/math/curve/: flatten.rs  solve_x.rs
src/math/tessellate/: winding_tree.rs
src/miniweb/: dom.rs  layout.rs  realm.rs  render.rs  style.rs
src/miniweb/realm/: symbol.rs
src/miniweb/style/: computed.rs  restyle.rs  sheet.rs  specified.rs  types.rs
src/outline/: flatten.rs  stroke.rs
src/rasterize/: bitmap.rs  blur.rs  polygon.rs  sw.rs  wgpu.rs
src/rasterize/sw/: blit.rs  blur.rs
src/rasterize/wgpu/: blit.wgsl  blur.wgsl  fill.wgsl  packer.rs  stroke.wgsl
src/srv3/: convert.rs  mod.rs  parse.rs  render.rs
src/style/: computed.rs  parsers.rs  specified.rs  types.rs  values.rs
src/style/values/: color.rs  display.rs  font.rs  inline.rs  length.rs  text.rs  text_decor.rs  writing_modes.rs
src/text/: face.rs  font_db.rs  font_manager.rs  font_match.rs  font_select.rs  ft_utils.rs  glyph_cache.rs  glyph_string.rs  glyphstring.rs  layout.rs  platform_font_provider.rs  shape.rs
src/text/face/: freetype.rs  panose.rs  tofu.rs
src/text/font_backend/: fontconfig.rs
src/text/font_provider/: directwrite.rs  fontconfig.rs
src/text/platform_font_provider/: directwrite.rs  fontconfig.rs  ndk.rs
src/util/: array_vec.rs  btree.rs  math.rs  quad_tree.rs  rcarray.rs  small_type_map.rs  unique_arc.rs
src/vtt/: convert.rs  mod.rs  parse.rs
src/vtt/parse/: text.rs
subrandr-macros/: Cargo.toml
subrandr-macros/src/: css.rs  lib.rs  parse.rs  style.rs
tests/assets/: Ahem.ttf.ptr  BungeeTint-Regular.ttf.ptr  NotoColorEmoji-Subset.ttf.ptr  NotoSansArabic-Regular.ttf.ptr  NotoSansJP-Regular.ttf.ptr  NotoSerif-Regular.ttf.ptr  README.md
tests/helper/: __main__.py  lfs.py  ptr.py
tests/layout/: abc.png.ptr  block.rs  common.rs  font_feature_settings.rs  funny_file.txt  funny_file.txt.ptr  funny_file2.txt  hello_world.png.ptr  hello_world.rs  inline_block.rs  inline_sizing.rs  inline_spacing.rs  input_edge_cases.rs  line_break_anywhere.rs  mod.rs  padding.rs  ruby.rs  shaping.rs  text_decoration.rs  text_shadow.rs  whitespace.rs
tests/layout/snapshots/: block_horizontal_margins.png.ptr  block_many_blocks.png.ptr  block_many_lines.png.ptr  (+72 more)
tests/layout_tests/: all.rs  basic.rs  common.rs  hello_world.png.ptr
text-sys/: Cargo.toml  build.rs  generate_bindings.sh  generate_errordefs.py  header.h
text-sys/src/: fontconfig.rs  lib.rs  unix.rs
wasi32/: .gitignore  Dependencies.Dockerfile  build_dependencies.sh  build_with_wgpu.sh  extract_wasm_bindgen_imports.py  extract_wasm_bindgen_stubs.py  package-lock.json  package.json  subrandr.d.ts  tsbuild.sh  tsbundle.sh  tsconfig.json
wasi32/src/: module.ts  subrandr.ts  wasm_utils.ts
webextension/: esbuild.sh  package-lock.json  package.json  staticwatch.sh  tscheck.sh  tsconfig.json
webextension/src/: content.ts  worker.ts
webextension/static/: manifest.json
xtask/: Cargo.toml
xtask/src/: build.rs  command_context.rs  diff_png.rs  lfs.rs  main.rs  output.rs  ptr.rs  sha256.rs
xtask/src/command_context/: cargo_metadata.rs
xtask/src/ptr/: path.rs
(+10 files in other folders)
