[package]
name = "subrandr"
version = "0.1.0"
edition = "2021"

[package.metadata.capi]
# This is very crudely parsed by the build script, don't touch.
abiver = "0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
wgpu = ["dep:wgpu"]

[dependencies]
thiserror = "1"
quick-xml = "0.36"

# TODO: Waiting for get_or_try_init to get stabilised.
once_cell = "1"

text-sys = { path = "./text-sys" }
wgpu = { version = "25", optional = true }

icu_segmenter = { version = "1", features = ["compiled_data"] }
subrandr-macros = { version = "0.1.0", path = "subrandr-macros" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_DirectWrite"] }
windows-core = "0.61"

[profile.release]
panic = "abort"

[profile.profiling]
inherits = "release"
strip = false
debug = true

[workspace]
members = [
  "sbr-overlay",
  "subrandr-macros",
  "xtask"
]
