[package]
name = "sbr-overlay"
version = "0.1.0"
edition = "2024"

[features]
default = ["ipc-mpv", "ipc-browser-cdp"]

wgpu = ["subrandr/wgpu", "dep:wgpu", "dep:pollster"]

ipc-mpv = ["dep:serde_json", "_serde"]
ipc-browser-cdp = ["dep:tungstenite", "dep:serde_json", "_serde"]
_serde = ["dep:serde"]

[dependencies]
subrandr = { path = "..", default-features = false }

anyhow = "1.0.97"

clap = { version = "4", features = ["derive"] }
tungstenite = { version = "0.26.1", optional = true }
serde_json = { version = "1.0.134", optional = true }
serde = { version = "1.0.216", features = ["derive"], optional = true }

winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "x11"] }

wgpu = { workspace = true, optional = true }
pollster = { version = "0.4.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1", features = ["res", "shape", "xlib_xcb"] }
