[package]
name = "sbr-rasterize"
version.workspace = true
edition.workspace = true

[features]
wgpu = ["dep:wgpu"]

[dependencies]
util = { workspace = true }
wgpu = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sai"
harness = false

[lints]
workspace = true
