[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
implib = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"

ureq = { version = "3", optional = true }
sha2 = { version = "0.10", optional = true }
indexmap = { version = "2", optional = true }

[features]
full = ["dep:ureq", "dep:sha2", "dep:indexmap"]
